<li> 14/8/15 Added 2-loop corrections to gluino/squark masses in the NMSSM
<li> 14/7/15 Fixed flavoured GMSB SLHA control: thanks to R Franceschini
<li> 19/6/15 Made sfermion mixing in SLHA output the *tree-level* mixing at MSUSY: better defined theoretically and more useful
<li> 02/5/15 Better error trapping after bail-out of main iteration. Thanks to P Millet
<li> 29/5/15 Use exact field combination mixture for mA(1) in 2-loop tadpoles and protect against nans in pseudoscalar NMSSM calculations
<li> 26/5/15 Bug-fixed input of tan beta scale in NMSSM in SLHA format
<li> 23/5/15 Bug-fixed one-loop Higgs mass corrections in NMSSM
<li> 23/4/15 If higher orders are NOT used, SOFTSUSY will use approximate higher orders now for the top Yukawa. Some percent level changes to masses happen.
<li> 21/4/15 Higher order options re-named for arguments of softpoint.x and configure
<li> 16/4/15 Upgrade: added 2-loop sparticle mass corrections (two-loop gluino done).